# 2025_12

./: .gitignore  README.md  Taskfile.yml  compose.yml
.github/: pull_request_template.md
core/: .gitignore  Cargo.toml
core/chat/: Cargo.toml
core/chat/src/: clerk.rs  error.rs  main.rs  webhook.rs  websocket.rs
core/chat/src/api/: message.rs  room.rs  user.rs
core/chat/src/websocket/: event.rs  translate.rs
core/db/: Cargo.toml
core/db/src/: error.rs  lib.rs  message.rs  participants.rs  room.rs  user.rs
core/db/src/fixtures/: message.sql  messages_for_reply.sql  participant.sql  room.sql  user.sql
core/models/: Cargo.toml
core/models/bindings/: EventFromClient.ts  EventFromServer.ts  WSRoom.ts  WSUserMessage.ts  WSUserMessageFromClient.ts  WSUserMessageFromServer.ts
core/models/src/: lib.rs  websocket.rs
db/migrations/: 000001_users.up.sql  000002_rooms.up.sql  000003_participants.up.sql  000004_messages.up.sql
server/: Cargo.toml
server/chat/: Cargo.toml
server/chat/src/: clerk.rs  main.rs  webhook.rs  websocket.rs
server/chat/src/api/: user.rs
server/db/: Cargo.toml
server/db/src/: lib.rs  message.rs  participants.rs  room.rs  user.rs
server/db/src/fixtures/: message.sql  user.sql
server/models/: Cargo.toml
server/models/src/: lib.rs
taskfile/: Taskfile.core.yml  Taskfile.db.yml  Taskfile.server.yml  Taskfile.web.yml
web/: .gitignore  .stylelintrc.json  README.md  biome.json  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/: middleware.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/create-profile/: page.tsx
web/src/app/home/: page.tsx
web/src/app/invite/: page.tsx
web/src/app/room/[slug]/: page.tsx
web/src/app/setting/: layout.tsx
web/src/app/setting/account/: page.tsx
web/src/app/setting/profile/: page.tsx
web/src/app/sign-in/: page.tsx
web/src/app/sign-up/: page.tsx
web/src/components/ui/: button.tsx  context-menu.tsx  icons.tsx  input.tsx  select.tsx  sonner.tsx
web/src/features/account/: store.ts  type.ts  user-initialyzer.tsx
web/src/features/header/: index.module.scss  index.tsx
web/src/features/message/: store.ts  type.ts
web/src/features/mini-chat/: index.module.scss  index.tsx
web/src/features/room/: store.ts  type.ts
web/src/features/routes/chat/: bottom-input.tsx  bottom-kansai-translate-area.tsx  bottom-reply-button.tsx  footer.module.scss  footer.tsx  index.module.scss  message-author.tsx  message-container.tsx  message-content.tsx  (+7 more)
web/src/features/websocket/: store.ts
web/src/lib/: apiClient.ts
web/src/style/: global.scss  screen.scss  shadow.scss  text.scss  theme-tailwind.css  theme.scss  utils.scss
web/src/types/: EventFromClient.ts  EventFromServer.ts  FailedToJoinRoomReason.ts  WSUserMessage.ts  WSUserMessageFromClient.ts  WSUserMessageFromServer.ts  api.ts
web/src/zodios/: api.ts  apiclient.ts
(+24 files in other folders)
