[package]
name = "chat"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre = "0.6.3"
thiserror.workspace = true
db = { path = "../db" }
models = { path = "../models" }
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
rand = "0.9.0"
parking_lot = "0.12.3"
clerk-rs = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
base64 = "0.22.1"
svix = "1.57.0"
chrono = "0.4.39"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
futures = "0.3.31"
uuid = { version = "1.13.2", features = ["v4"] }
derive_more = { version = "2", features = ["deref", "display"] }
reqwest = "0.12.12"
scraper = "0.22.0"
encoding_rs = "0.8.35"
