[package]
name = "chat"
version.workspace = true
edition.workspace = true

[dependencies]
dotenvy.workspace = true
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
rand = "0.9.0"
db = { path = "../db" }
