[package]
name = "chat"
version.workspace = true
edition.workspace = true

[dependencies]
dotenvy.workspace = true
axum = { version = "0.8.1", features = ["ws", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
rand = "0.9.0"
parking_lot = "0.12.3"
clerk-rs = { version = "0.4.0" }
db = { path = "../db" }
models = { path = "../models" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
base64 = "0.22.1"
svix = "1.57.0"
chrono = "0.4.39"
