[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { version = "0.8.3", features = ["chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
utoipa = { version = "5.3.1", features = ["axum_extras","chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
